# ChangeLog for sys-libs/glibc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1002 2014/07/31 09:14:37 pinkbyte Exp $

  31 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> glibc-2.19-r1.ebuild:
  arm stable, wrt bug #518364

  31 Jul 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.19-r1.ebuild:
  Mark arm64/ia64/m68k/sh stable.

  29 Jul 2014; Anthony G. Basile <blueness@gentoo.org> glibc-2.19-r1.ebuild:
  Stable on ppc and ppc64, bug #518364

  29 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> glibc-2.19-r1.ebuild:
  amd64 stable wrt bug #518364

  28 Jul 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit:
  Drop arch nptl logic as it only applies to really old versions of glibc now
  (linuxthreads) #518048 by Chase Rayfield.

*glibc-2.19-r1 (14 Jun 2014)

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org> +glibc-2.19-r1.ebuild:
  Fixes from upstream for cos #509494 and posix_spawn_file_actions_addopen
  #513090.

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org>
  files/eblits/pkg_preinst.eblit:
  Do not die when the devpts check fails and we are on an old kernel #489520 by
  William Throwe.

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info).

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/pkg_setup.eblit:
  Check MERGE_TYPE when doing downgrade check #255109 by Phil White.

  14 Jun 2014; Ryan Hill <rhill@gentoo.org> files/eblits/common.eblit:
  Strip -fstack-protector*. These flags are now enabled by default so we can
  consider them supported. And even on systems where gcc-specs-ssp is true,
  having -fstack-protector in CFLAGS causes a failure because flags added
  here end up getting /pre/pended to user flags.

  05 Apr 2014; Mike Frysinger <vapier@gentoo.org> glibc-2.17.ebuild,
  glibc-2.18-r1.ebuild, glibc-2.19.ebuild, glibc-9999.ebuild:
  Add multilib bootstraps for mips/ppc/s390 too.
