@@ -93,18 +93,24 @@ EBUILD glibc-2.18-r1.ebuild 7021 SHA256 308a57802e31f6ec4a2ab6be491bcf679707a6a7
 EBUILD glibc-2.19-r1.ebuild 6909 SHA256 70cec88c0ff3cf268a37cc87e3b5eb6f75a08260ab7c67d22fd932f8a4bc6561 SHA512 53ee1965a492e0e3791476df55725d6cd2b7badabe2f91fdf436ab5755511621914a024bd6f19a05e08343d22c1e16c27ff7b18353f4e455cb907fdcf4458add WHIRLPOOL 433cd8e1a1d842c2d02fc5e57fe8f97131a5c6d47b81e402145cc9f65b58b5fd7b60e2afb6d378cddb707da5650ec556adf37b2a94fc129c87d6e772445d5691
 EBUILD glibc-2.19.ebuild 6912 SHA256 3a11e60bed77cc2dad678ad97ed7a959a59a91a94ca28fd4d7d8776a6217a00f SHA512 70c9b91f224c276783b96ae60f57ac48886861fda71be6e6e292840b4c8cc0fea798005c26c6c33f198c63fb2c38bf78e994821dfa010086ba7ece443257b851 WHIRLPOOL 98be39cc52c7d8431e46f24f9552db63980f4a38c8e12aaffd4b08c7c66f8931a16fd7deb99e43a5bb330a42e6c1e722a9a8f74d1fe97523d7b4bfe75c9accf5
 EBUILD glibc-2.9_p20081201-r3.ebuild 6787 SHA256 3d9ff2b86df088b8e8cc082c5ddef164b48cffcccfa2ea001306e79a6d52a52c SHA512 7070020105a777bbf6d846fab291b238d7861472c737031e8c52b6d5c2a0524e228b724751325448ce94a42ee39112088b91d0597cd2cdbcc68c51248d2d5a11 WHIRLPOOL aa0e2d11377c3a30478afbef0fa3daa12aa9711d68dc92ab08fca999e599c613648644da2e6f81c38dc98192ed26934c4a35418a97d3146650cd4c82e39a7fed
-EBUILD glibc-9999.ebuild 6914 SHA256 4971f17230296be26af64606f485ecc96b39443299fefed061bd5d75bb92d3b1 SHA512 f3b13235306910ac2ab642de66dc128977fd5bfb33d89d676b464f39e81a7f095283fd5b761d06bfddde111da8763109b06d2223c54d9ae29aa1cd12638c8233 WHIRLPOOL 12c1f8c129da0722346b239e56a1d9f3a7a84739d2e60e986a3946d61297f630f51ec9e03fb0c05958a6c39a01d4ef5d999466632acd27b0125ca0b91170db7f
-MISC ChangeLog 67704 SHA256 4679848c6921ddfcf876b96e20acb4f0c70c9e8b3eeb65acfea37ac8c1c881cf SHA512 6b80162525e25073c523081e7d795e9cf8e4138ff9f00d141fef29bc3940db340e41d99b9e8d20d1d0a70ed10f0bb60ae4e0f7126f3040b85f85d6e8c7a5e770 WHIRLPOOL 397727a4aa57ddcdff2b5551f2a5342aaea6974a62b10da1a54696e8a1afa84f4da091a7d8b1283b7f21580ce3e693d4443a160661678645f495aeacff44a8b6
+EBUILD glibc-9999.ebuild 6839 SHA256 3d51b4a03932748b6716fdb1c63f6c083651f3d1bae585c989adf0c106c86d58 SHA512 14339b49e597d744e488ccecb17eef69ee22f2a49cf69a280377816cde522e56abf690c487a9cdcb396ef8084b165dd716956c02ee16bea45f39a0875ef2ffcd WHIRLPOOL f52e905e4f29d7d3e9da861028eae695160d1aff250060748e5ee5da2eb4b39a895ddf0a5fa3995f844631cc89f114e58ff9ac603b4c76f6bc36ed6855f037cd
+MISC ChangeLog 67836 SHA256 585972be220e2f550c7fa61fb5ebe16e12cdf98824727f487f8e02125448e184 SHA512 912f76e178503f631b1d7bc76339516e2c15d07fabab9ee8fbd2deb55ac0efb011d9524638a80de93983cca938ea0d6a990bccafb044f48099778e1361ea65b8 WHIRLPOOL cb4af12d4a6179a42102e93c83bdc7af887de99fc6e1af7c9a4f1a390ae796d5cccaddf1916e1e44e45eaf71f01640fb0f280bd2640fa3b1a4203b29f9be7cc2
 MISC ChangeLog-2007 108548 SHA256 d622be202eb0d61a363b0ae4065012cd1d494fefaa0c03d4aa7986177cdde6d0 SHA512 fdb3f311a3be4b97a6acfceb1763af5ea69e74d8195522c5d03307f75e15a9382991e9e29dbfdec79e74f1c36328f82648768749bc929e5050ff64b628c7ca98 WHIRLPOOL e550f354394569069e000a7e70ec69c94388a0f415c19b427203f0dcbcbeeec0f5e379ee2af7886cd2d68559e749fab8122e7e077985729d7e0e728ae9096d7a
 MISC metadata.xml 596 SHA256 b01caf6893890849a5aef5350b9b8528edb49554ea35b689ae778d475d4a84be SHA512 2ea5bd979d036f6844df11b8e1ee8bd90b61cf66fccf988a5a53e8777710b9e7aa137cf79c8e2f840986805220d1c19ac2b1c83778a5b1bb2b0976b2354768f4 WHIRLPOOL 6cadab521e9b1ef68f9b5f827fcd123e13a58291dd6a958b17193d9e6ac44aae4f73d09f4b1dbc4a9b81612073da6361e50bb1ba9733418ce008f6191e5a0f39
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT2gj9AAoJECo/aRed9267s0sH/j3Bb+YJrOSXvyCXF+8e88kb
-CSbLSAtQnBwcE0DbP6zgTh99Z5r9T5QZceMge7i0nhdrOo4pfhHWl6Tgrq7SQNBb
-O+B80Cqv54iYxB0Ev+o+/UFfwVJVy0EzJX/aSGrdxtHhih9LfPVO6ulZ6ltEtHPB
-KLBzdtcxJPQfVkCH+/RyeLoVFcLY5RpvHcsSkwUFGujhDCZC9nP5IUzoUOsAmxfV
-ZActDZyqjgoI6mGD34s+QiPG6KYztMKGjbOp31jG/XpatsOEZhdNZWt31TiJiOLm
-xoVSosmC7kbWBtuRM70V5+xHqhvkcRtaiASQvwMqhbs+D1FTQCGm2i7QO6DfYFI=
-=QVcz
+iQIcBAEBCAAGBQJT3xdNAAoJEPGu1DbS6WIAZRUP/RQja1caE2fDE2hrY8W9JAoj
+1Iqb/xF5V1oh31uxEBAUc88RGb7gGTJvg2MSV3muYNzYBoQZPMylKIHlFR1LHAlq
+rVEESGbEzhy0rK/MrLDp43P5CwUASxuZTqezbtsH/40PoSdvKZ4TiAbJLuLFjAnj
+nDI7vFS2k9xB/5Y5Q0DB0/fQLC9vMPGQIT7cAY2XPEMskXBzvjfTUsEsgG16l8iv
+7O2FTKuHio7ifle+Idvo1dKN9r1ubZvAE8vlAnOSEYHSGYfl2cGu2ZKAQPRYaBKG
+wQPb/X+Lh8NkMzJVb9eKwtxaUJ0lx3D5Hb337NPNKMEWWV0jozEUfNcI4f75S3jr
+xD2MA4wiErh8KW96vq4RHcKeCvdb0ro1iawiDrA4uWjLnoj0F0+SZpJNiiJ7Nujn
+8x8hgg+WV6htU5EQmAwV8QLjCHTS6eda/vrBORbflLkmHIiSE5BPms36Bf3mbTqV
+v9aunBD9fBoyatj94W1WYQU/3sPxsaY5M+puhbwheFu8ezUesgGgfXp05oyAI7mI
+xebJtRkVNgO1oaKm2OY/OdggbMNMrq/43slqATBM+egjI8vY49E1/LfMguyADPd1
+bYvk6l++WZvyDbQqRQusHryO2XsZnk+GB/qaRQXkDLO5kB6H2z8ddG/8qRjOG7jc
+yxt09wXtwblKHs3M/Uwf
+=E1S9
 -----END PGP SIGNATURE-----
