@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1002 2014/07/31 09:14:37 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.1003 2014/08/04 05:16:53 vapier Exp $
+
+  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> glibc-9999.ebuild:
+  Update required kernel version to 2.6.32 to reflect upstream.
 
   31 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> glibc-2.19-r1.ebuild:
   arm stable, wrt bug #518364
